# registration

./: CMakeLists.txt  README.md  README.txt  get_displacements.cpp  loop.sh  pcl_changes.txt  plot_displacements.gmt  registration.cpp  texttopcd.cpp
